[gd_scene load_steps=28 format=2]

[ext_resource path="res://Scenes/dialogs/Dialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/loginRegister/stilo.tres" type="Theme" id=2]
[ext_resource path="res://art/inicio_sesion/fondo_inicio.png" type="Texture" id=3]
[ext_resource path="res://Scenes/loginRegister/LoginScreen.gd" type="Script" id=4]
[ext_resource path="res://art/inicio_sesion/circulo3.png" type="Texture" id=5]
[ext_resource path="res://art/registro/maestraa.png" type="Texture" id=6]
[ext_resource path="res://art/inicio_sesion/niño_unico.png" type="Texture" id=7]
[ext_resource path="res://art/registro/Imagen3.png" type="Texture" id=8]
[ext_resource path="res://art/inicio_sesion/pngwing.com (1).png" type="Texture" id=10]
[ext_resource path="res://art/registro/pizarra.png" type="Texture" id=11]
[ext_resource path="res://art/inicio_sesion/Imagen4.png" type="Texture" id=15]
[ext_resource path="res://art/inicio_sesion/Imagen7.png" type="Texture" id=17]
[ext_resource path="res://art/registro/Imagen8.jpg" type="Texture" id=18]

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 401, 512 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "niña"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 17, 389 ), Vector2( 17, -18 ) ]
}

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.682353, 0.756863, 0.286275, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Theme" id=6]
LineEdit/styles/normal = SubResource( 5 )

[sub_resource type="Animation" id=21]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 23, 508 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "mover_arriba"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 148, 1100 ), Vector2( 148, 545 ) ]
}

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.12549, 0.27451, 0.0705882, 0.843137 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Theme" id=14]
LineEdit/styles/normal = SubResource( 13 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.156863, 0.333333, 0.0862745, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Theme" id=16]
LineEdit/styles/normal = SubResource( 15 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.156863, 0.333333, 0.0862745, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Theme" id=18]
LineEdit/styles/normal = SubResource( 17 )

[sub_resource type="Animation" id=23]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1105, -949 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2800, 2933 ) ]
}

[sub_resource type="Animation" id=24]
resource_name = "transicion_x"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 0.8, 0.9, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1105, -949 ), Vector2( 241, 385 ), Vector2( 116, 385 ), Vector2( -100, 385 ), Vector2( -1200, 385 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 0.8, 0.9, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2800, 2933 ), Vector2( 137, 131 ), Vector2( 262, 131 ), Vector2( 354, 131 ), Vector2( 562, 131 ) ]
}

[node name="LoginScreen" type="Control"]
anchor_right = 2.055
anchor_bottom = 0.599
margin_left = -6.0
margin_right = -626.0
margin_bottom = 419.624
script = ExtResource( 4 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="TextureRect5" type="TextureRect" parent="NinePatchRect"]
margin_left = 4.0
margin_top = -1.0
margin_right = 623.0
margin_bottom = 1059.0
texture = ExtResource( 3 )

[node name="TextureRect2" type="TextureRect" parent="NinePatchRect"]
margin_left = 21.0
margin_top = 31.0
margin_right = 566.0
margin_bottom = 571.0
texture = ExtResource( 15 )

[node name="TextureRect3" type="TextureRect" parent="NinePatchRect"]
margin_left = 401.0
margin_top = 512.0
margin_right = 1048.0
margin_bottom = 1135.0
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="NinePatchRect/TextureRect3"]
anims/RESET = SubResource( 11 )
"anims/niña" = SubResource( 12 )

[node name="TextureRect" type="TextureRect" parent="NinePatchRect"]
margin_left = -100.0
margin_top = 175.0
margin_right = 695.001
margin_bottom = 1293.0
texture = ExtResource( 5 )

[node name="LoginContainer" type="VBoxContainer" parent="NinePatchRect"]
anchor_left = 0.491
anchor_right = 0.719
margin_left = 66.36
margin_top = 600.0
margin_right = 492.24
margin_bottom = 1121.0
rect_scale = Vector2( 1, 1.1 )
rect_pivot_offset = Vector2( 2, 2 )

[node name="NombreUsuario" type="Label" parent="NinePatchRect/LoginContainer"]
margin_right = 435.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "  Nombre de Usuario"

[node name="In_Usuario" type="LineEdit" parent="NinePatchRect/LoginContainer"]
margin_top = 34.0
margin_right = 435.0
margin_bottom = 74.0
rect_min_size = Vector2( 435, 40 )
theme = SubResource( 6 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )

[node name="HSeparator" type="HSeparator" parent="NinePatchRect/LoginContainer"]
margin_top = 78.0
margin_right = 435.0
margin_bottom = 82.0

[node name="Contraseña" type="Label" parent="NinePatchRect/LoginContainer"]
margin_top = 86.0
margin_right = 435.0
margin_bottom = 116.0
rect_min_size = Vector2( 0, 30 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "  Contraseña"

[node name="In_Contrasena" type="LineEdit" parent="NinePatchRect/LoginContainer"]
margin_top = 120.0
margin_right = 435.0
margin_bottom = 160.0
rect_min_size = Vector2( 435, 40 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.141176, 0.929412, 0.839216, 1 )
max_length = 15
secret = true

[node name="HSeparator2" type="HSeparator" parent="NinePatchRect/LoginContainer"]
margin_top = 164.0
margin_right = 435.0
margin_bottom = 168.0

[node name="LoginBttn" type="Button" parent="NinePatchRect/LoginContainer"]
margin_top = 172.0
margin_right = 435.0
margin_bottom = 192.0
text = "Login"

[node name="RegisterRedi" type="Button" parent="NinePatchRect/LoginContainer"]
margin_top = 196.0
margin_right = 435.0
margin_bottom = 216.0
text = "Register"

[node name="TextureRect6" type="TextureRect" parent="NinePatchRect"]
margin_left = 67.0
margin_top = 458.0
margin_right = 525.0
margin_bottom = 576.0
texture = ExtResource( 17 )

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
visible = false
margin_right = 617.0
margin_bottom = 1037.0
texture = ExtResource( 18 )

[node name="TextureRect" type="TextureRect" parent="NinePatchRect2"]
margin_left = -175.0
margin_top = 43.0
margin_right = 836.0
margin_bottom = 763.0
texture = ExtResource( 11 )

[node name="TextureRect5" type="TextureRect" parent="NinePatchRect2"]
margin_left = 23.0
margin_top = 508.0
margin_right = 597.0
margin_bottom = 1080.0
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="NinePatchRect2/TextureRect5"]
anims/RESET = SubResource( 21 )
anims/mover_arriba = SubResource( 22 )

[node name="RegisterContainer" type="VBoxContainer" parent="NinePatchRect2"]
anchor_left = 0.488
anchor_top = 0.138
anchor_right = 0.488
anchor_bottom = 0.138
margin_left = -173.096
margin_top = 121.894
margin_right = 212.904
margin_bottom = 481.894

[node name="NombreCompleto" type="Label" parent="NinePatchRect2/RegisterContainer"]
margin_right = 386.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
text = "   Nombre y Apellidos:"

[node name="In_Nombres" type="LineEdit" parent="NinePatchRect2/RegisterContainer"]
margin_top = 34.0
margin_right = 386.0
margin_bottom = 74.0
rect_min_size = Vector2( 0, 40 )
theme = SubResource( 14 )

[node name="HSeparator" type="HSeparator" parent="NinePatchRect2/RegisterContainer"]
margin_top = 78.0
margin_right = 386.0
margin_bottom = 82.0

[node name="N_Usuario" type="Label" parent="NinePatchRect2/RegisterContainer"]
margin_top = 86.0
margin_right = 386.0
margin_bottom = 116.0
rect_min_size = Vector2( 0, 30 )
text = "   Usuario (Alias):"

[node name="In_Usuario" type="LineEdit" parent="NinePatchRect2/RegisterContainer"]
margin_top = 120.0
margin_right = 386.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 40 )
theme = SubResource( 16 )

[node name="HSeparator2" type="HSeparator" parent="NinePatchRect2/RegisterContainer"]
margin_top = 164.0
margin_right = 386.0
margin_bottom = 168.0

[node name="Contrasena" type="Label" parent="NinePatchRect2/RegisterContainer"]
margin_top = 172.0
margin_right = 386.0
margin_bottom = 202.0
rect_min_size = Vector2( 0, 30 )
text = "   Contraseña:"

[node name="In_Contrasena" type="LineEdit" parent="NinePatchRect2/RegisterContainer"]
margin_top = 206.0
margin_right = 386.0
margin_bottom = 246.0
rect_min_size = Vector2( 0, 40 )
theme = SubResource( 18 )
max_length = 15
secret = true

[node name="RegisterBttn" type="Button" parent="NinePatchRect2/RegisterContainer"]
margin_top = 250.0
margin_right = 386.0
margin_bottom = 270.0
text = "Register"

[node name="LoginRedi" type="Button" parent="NinePatchRect2/RegisterContainer"]
margin_top = 274.0
margin_right = 386.0
margin_bottom = 294.0
text = "Login"

[node name="TextureRect3" type="TextureRect" parent="NinePatchRect2"]
margin_left = -109.0
margin_top = 73.0
margin_right = 851.0
margin_bottom = 242.0
texture = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
margin_left = -1105.0
margin_top = -949.0
margin_right = 1695.0
margin_bottom = 1984.0
texture = ExtResource( 10 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureRect"]
anims/RESET = SubResource( 23 )
anims/transicion_x = SubResource( 24 )

[node name="Message" parent="." instance=ExtResource( 1 )]
visible = false

[connection signal="pressed" from="NinePatchRect/LoginContainer/LoginBttn" to="." method="_on_LoginBttn_pressed"]
[connection signal="toggled" from="NinePatchRect/LoginContainer/LoginBttn" to="." method="_on_LoginBttn_toggled"]
[connection signal="pressed" from="NinePatchRect/LoginContainer/RegisterRedi" to="." method="_on_RegisterRedi_pressed"]
[connection signal="pressed" from="NinePatchRect2/RegisterContainer/RegisterBttn" to="." method="_on_RegisterBttn_pressed"]
[connection signal="pressed" from="NinePatchRect2/RegisterContainer/LoginRedi" to="." method="_on_LoginRedi_pressed"]
